// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductContainer should match snapshot with products 1`] = `
<section
  className="products-container"
>
  <Component
    id={1}
    key="0"
    name="MeatSticks"
    selectProduct={[Function]}
  />
  <button
    onClick={[Function]}
  />
</section>
`;

exports[`ProductContainer should match snapshot without products 1`] = `
<section
  className="products-container"
>
  <button
    onClick={[Function]}
  />
</section>
`;
